--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,17 @@ body {
   color: var(--ocean);
 }
 
+.active::after {
+content:" " ;
+display: block;
+height: 4px;
+width: 100%;
+border-radius: 2px;
+background-color: var(--iris);
+position: relative;
+top: 15px;
+}
+
 .contacts {
   line-height: 1.5;
   color: var(--slate);
@@ -178,6 +189,10 @@ align-items: center;
 /* HERO SECTION STYLING */
 
 .hero {
+  background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
+  url("../images/people-office\ 1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   padding-top: 188px;
   padding-bottom: 188px;
   text-align: center;
@@ -279,10 +294,42 @@ fill: white;
 
 .projects li img {
   width: 100%;
+  display: block;
 }
 
-.projects li img {
- 
+.project:hover .project-image-caption {
+  opacity: 1;
+ transform: translateY(0);
+  
+}
+
+.project-image {
+  position: relative;
+  overflow: hidden;
+}
+
+.project {
+  overflow: hidden;
+}
+  
+
+.project-image-caption {
+  position: absolute;
+  background-color: rgba(77, 90, 229, 0.8);
+  color: white;
+  width: 100% ;
+  height: 100% ;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
+
+.project-image-caption p {
+  padding: 40px 32px;
 }
 
 /*FOOTER STYLING*/
